BUG#13520: BUG#13433: Fixed proper delimiters for fields and comments

mysql-test/r/partition.result:
  New test cases
mysql-test/t/partition.test:
  New test cases
sql/sql_partition.cc:
  Fixed proper delimiters for fields and comments